--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <p>New User? <a href="#">Click to Register!</a></p>
+    <p>New User? <a href="{{url_for('auth.register')}}">Click to Register!</a></p>
     <h1>Sign In</h1>
     <form action="" method="post" novalidate>
         {{ form.hidden_tag() }}
