--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,6 +14,8 @@
           <a href="{{url_for('auth.login')}}">Login</a>
           {% else %}
           <a href="{{url_for('auth.logout')}}">Logout</a>
+          <a href="{{url_for('user.user', username = current_user.username)}}">Profile</a>
+
           {% endif %}
           
         </div>
