--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,5 +1,3 @@
-
-
 <html>
     <head>
       {% if title %}
@@ -38,7 +36,10 @@
         {% endif %}
         {% endwith %}
         {% block content %}{% endblock %}
-        
+        {% block scripts %}   
+          {{ moment.include_jquery() }}
+          {{ moment.include_moment() }}
+        {% endblock %}    
     </body>
 
 </html>
