--- a/app/templates/user/user.html
+++ b/app/templates/user/user.html
@@ -6,7 +6,7 @@
             <td><img src="{{ user.avatar(128) }}"></td>
             <td><h1>User: {{ user.username }}</h1>
             {% if user.about_me %}<p>{{ user.about_me }}</p>{% endif %}
-            {% if user.last_seen %}<p>Last seen on: {{ user.last_seen }}</p>{% endif %}
+            {% if user.last_seen %}<p>Last seen on: {{ moment(user.last_seen).format('LL') }}</p>{% endif %}
             <p>{% if user == current_user %}<a href="{{url_for('edit_profile')}}">Edit your profile</a>{% endif %}</p></td>
         </tr>
     </table>
