--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,9 +15,9 @@
           {% else %}
           <a href="{{url_for('auth.logout')}}">Logout</a>
           <a href="{{url_for('user', username = current_user.username)}}">Profile</a>
-          <a href="{{url_for('talks.new_talk')}}">New Talk</a>
-
+          <a href="{{url_for('articles.new_article')}}">New Article</a>
           {% endif %}
+          <a href="{{url_for('articles.index')}}">Article</a>
           
         </div>
         <hr>
