comment htm_body

--- a/app/templates/articles/_comment.html
+++ b/app/templates/articles/_comment.html
@@ -14,7 +14,7 @@
 	commented {{moment(comment.timestamp).fromNow()}} :
 </p>
 <div class='comment-body'>
-	{{comment.body}}
-	{{comment.body_html | safe}}
+	
+	{{comment.body_html}}
 	
 </div>
