--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -39,6 +39,7 @@
         {% block scripts %}   
           {{ moment.include_jquery() }}
           {{ moment.include_moment() }}
-        {% endblock %}    
+          {{pagedown.include_pagedown()}}
+        {% endblock %} 
     </body>
 </html>
