--- a/app/templates/articles/article.html
+++ b/app/templates/articles/article.html
@@ -21,16 +21,45 @@
 	{% include 'articles/_comments.html' %}
 {% endif %}
 <h3 id='comment-form'>Write a comment</h3>
-{{form}}
-<form action="" method="post" novalidate>
-        {{ form.hidden_tag() }}
-        <p>
-            {{ form.body.label }}<br>
-            {{ form.body(size=32) }}<br>
-            {% for error in form.body.errors %}
-                <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </p>
-        <p>{{ form.submit() }}</p>
-</form>
+{% if current_user.is_authenticated %}
+	<form action="" method="post" novalidate>
+	        {{ form.hidden_tag() }}
+	        <p>
+	            {{ form.body.label }}<br>
+	            {{ form.body(size=32) }}<br>
+	            {% for error in form.body.errors %}
+	                <span style="color: red;">[{{ error }}]</span>
+	            {% endfor %}
+	        </p>
+	        <p>{{ form.submit() }}</p>
+	</form>
+{% endif %}
+{% if current_user.is_anonymous %}
+	<form action="" method="post" novalidate>
+	        {{ form.hidden_tag() }}
+	        <p>
+	            {{ form.name.label }}<br>
+	            {{ form.name(size=32) }}<br>
+	            {% for error in form.name.errors %}
+	                <span style="color: red;">[{{ error }}]</span>
+	            {% endfor %}
+	        </p>
+	        <p>
+	            {{ form.email.label }}<br>
+	            {{ form.email(size=32) }}<br>
+	            {% for error in form.email.errors %}
+	                <span style="color: red;">[{{ error }}]</span>
+	            {% endfor %}
+	        </p>
+	        <p>
+	            {{ form.body.label }}<br>
+	            {{ form.body(size=32) }}<br>
+	            {% for error in form.body.errors %}
+	                <span style="color: red;">[{{ error }}]</span>
+	            {% endfor %}
+	        </p>
+	        <p>{{ form.notify()}} {{form.notify.label}}</p>
+	        <p>{{ form.submit() }}</p>
+	</form>
+{% endif %}
 {% endblock %}
