--- a/app/templates/articles/article.html
+++ b/app/templates/articles/article.html
@@ -17,9 +17,10 @@
 </div>
 
 {% if comments %}
-	<h3>Comments</h3>
+	<h3 id='comments'>Comments</h3>
 	{% include 'articles/_comments.html' %}
 {% endif %}
+
 <h3 id='comment-form'>Write a comment</h3>
 {% if current_user.is_authenticated %}
 	<form action="" method="post" novalidate>
