--- a/app/templates/articles/_comment.html
+++ b/app/templates/articles/_comment.html
@@ -1,20 +1,39 @@
 <p>
 	{% if comment.author %}
+	{% if index %}
 		<span class='label label-primary'>#{{index}}</span>
+	{% endif %}
 		<a href="{{url_for('user', username = comment.author.username)}}">
 			{{comment.author.username}}
 		</a>
 	{% else %}
-		<span class='label label-default'>#{{index}}</span>
-		<b>{{comment.author_name}}</b>
+	{% if article.author == current_user or current_user.is_admin %}
+		{% if not comment.approved %}
+		<div id="moderate-{{ comment.id }}" class="pull-right">
+			<a class="btn btn-primary api-approve" data-id="{{ comment.id }}"
+			href="#"><span class="glyphicon glyphicon-ok"></span>Approve</a>
+			<a class="btn btn-danger api-delete" data-id="{{ comment.id }}"
+			href="#"><span class="glyphicon glyphicon-trash"></span>Delete</a>
+		</div>
+		<div id="approved-{{ comment.id }}" class="pull-right" style="display:none;">
+			<span class="glyphicon glyphicon-ok"></span><b>Approved</b>
+		</div>
+		<div id="deleted-{{ comment.id }}" class="pull-right" style="display:none;">
+			<span class="glyphicon glyphicon-trash"></span><b>Deleted</b>
+		</div>
+		{% endif %}
 	{% endif %}
-	{% if current_user.is_authenticated and (article.author == current_user) %}
-			<a href='mailto:{{ comment.author.email }}'>{{comment.author.email}}</a>
+	{% if index %}
+	<span class='label label-default'>#{{index}}</span>
 	{% endif %}
+	<b>{{comment.author_name}}</b>
+	{% if current_user.is_authenticated and (article.author == current_user or current_user.is_admin) %}
+	(<a href="mailto:{{ comment.author_email }}">{{ comment.author_email}}</a>)
+	{% endif %}
+	{% endif %}
+	
 	commented {{moment(comment.timestamp).fromNow()}} :
 </p>
 <div class='comment-body'>
-	
 	{{comment.body_html | safe}}
-	
 </div>
