add reset password function

--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -2,6 +2,10 @@
 
 {% block content %}
     <p>New User? <a href="{{url_for('auth.register')}}">Click to Register!</a></p>
+    <p>
+        Forgot Your Password?
+        <a href="{{ url_for('auth.reset_password_request') }}">Click to Reset It</a>
+    </p>
     <h1>Sign In</h1>
     <form action="" method="post" novalidate>
         {{ form.hidden_tag() }}
